/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Class.java to edit this template
 */
package ff;

/**
 *
 * @author ficarra.gabriele
 */
public class Noctis extends PersonaggioBase {

    private int mana;
    private int manaMax;
    
    public Noctis() {
        super();
        this.mana = 10;
        this.manaMax = 10;
    }
    
}
